--- a/src/navigation/index.css
+++ b/src/navigation/index.css
@@ -69,7 +69,7 @@
   }
 }
 
-@media (--lg-viewport) {
+@media (--gtlg-viewport) {
   .Nav-link {
     width: var(--nav-link-size-lg);
     height: var(--nav-link-size-lg);
