--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -10,9 +10,10 @@
 */
 
 @custom-media --sm-viewport (min-width:0) and (max-width:639px);
-@custom-media --md-viewport (min-width:640px) and (max-width:960px);
+@custom-media --md-viewport (min-width:640px) and (max-width:959px);
 @custom-media --gtmd-viewport (min-width:640px);
-@custom-media --lg-viewport (min-width:960px);
+@custom-media --lg-viewport (min-width:960px) and (max-width:1059px);
+@custom-media --gtlg-viewport (min-width:960px);
 @custom-media --xlg-viewport (min-width:1060px);
 
 /**
