--- a/assets/index.css
+++ b/assets/index.css
@@ -1763,7 +1763,7 @@ html,
 body {
   height: 100%;
   overflow-x: hidden;
-  --webkit-overflow-touch: scrolling;
+  --webkit-overflow-scrolling: touch;
 }
 
 html {
