--- a/src/base/index.css
+++ b/src/base/index.css
@@ -8,7 +8,7 @@ html,
 body {
   height: 100%;
   overflow-x: hidden;
-  --webkit-overflow-touch: scrolling;
+  --webkit-overflow-scrolling: touch;
 }
 
 html {
