--- a/assets/index.css
+++ b/assets/index.css
@@ -1866,7 +1866,7 @@ textarea {
 @media (min-width:0) and (max-width:639px) {
   .Header {
     min-width: 320px;
-    box-shadow: 0 0 5px rgba(0,0,0,.05);
+    box-shadow: 0 0 1.2374999999999998rem rgba(0,0,0,.07), 0 0 0.20625rem rgba(0,0,0,.1);
     position: fixed;
     top: 0;
     left: 0;
