--- a/assets/index.css
+++ b/assets/index.css
@@ -2055,11 +2055,25 @@ textarea {
 .Prose p a,
 .Prose li a {
   opacity: .9;
-  background-image: -webkit-linear-gradient(top, rgba(0,0,0,0) 70%, rgba(0,0,0,.7) 70%);
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 70%, rgba(0,0,0,.7) 70%);
+  background-image: -webkit-linear-gradient(top, rgba(0,0,0,0) 50%, rgba(0,0,0,.4) 50%);
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 50%, rgba(0,0,0,.4) 50%);
   background-repeat: repeat-x;
   background-size: 2px 2px;
-  background-position: left bottom;
+  background-position: left 90%;
+  color: #292f33;
+  color: transparent;
+  text-shadow: 0 0 #292f33, .08em 0 0 #fff, 0 0, -.08em 0 0 #fff;
+  -webkit-transition: all .25s ease-out;
+          transition: all .25s ease-out;
+}
+
+.Prose p a:hover,
+.Prose li a:hover {
+  color: #000;
+  color: transparent;
+  text-shadow: 0 0 #000, .08em 0 0 #fff, 0 0, -.08em 0 0 #fff;
+  background-image: -webkit-linear-gradient(top, rgba(0,0,0,0) 50%, rgba(0,0,0,.7) 50%);
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 50%, rgba(0,0,0,.7) 50%);
 }
 
 .Prose p {
