--- a/assets/index.css
+++ b/assets/index.css
@@ -2544,12 +2544,12 @@ textarea {
 }
 
 html.swipebox-html.swipebox-touch {
-  overflow: hidden!important;
+  /*overflow: hidden!important;*/
 }
 
 .swipebox-html,
 .swipebox-html body {
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .Swipebox-overlay {
