Tweaked layout. Added contact details.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="Prose u-lRestrictRead u-sPV1 u-sPHH">
+<div class="Prose u-lRestrictRead u-sPV1">
   <header>
     <a href="/journal" class="breadcrumb u-block u-sMBH">Journal</a>
     <h1>{{ page.title }}</h1>
