--- a/src/social/index.css
+++ b/src/social/index.css
@@ -35,6 +35,10 @@
   background: #4099ff !important;
 }
 
+.Social-link--google:hover {
+  background: #dd4b39 !important;
+}
+
 .Social-link--facebook:hover {
   background: #3b5998 !important;
 }
