--- a/assets/index.css
+++ b/assets/index.css
@@ -844,12 +844,20 @@
   margin-right: 1.65rem !important;
 }
 
+.u-sMTQ {
+  margin-top: 0.4125rem !important;
+}
+
 .u-sMTH {
   margin-top: 0.825rem !important;
 }
 
 .u-sMT1 {
   margin-top: 1.65rem !important;
+}
+
+.u-sMBQ {
+  margin-bottom: 0.4125rem !important;
 }
 
 .u-sMBH {
