Publish 'That Vintage Vibe' with tweaks to prose images.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <header>
     <a href="/journal" class="breadcrumb u-block u-sMBH">Journal</a>
     <h1>{{ page.title }}</h1>
-    <p class="u-textMeta u-sMBH">{{ page.date | date: "%b %-d, %Y" }}</p>
+    <p class="u-textMeta u-sMB1">{{ page.date | date: "%b %-d, %Y" }}</p>
   </header>
 
   <article>
