--- a/src/prose/index.css
+++ b/src/prose/index.css
@@ -49,6 +49,11 @@
   margin-left: var(--rhythm);
 }
 
+.Prose img {
+  margin: 0 -10%;
+  max-width: 120%;
+}
+
 @media (--sm-viewport) {
   .Prose h1 {
     font-size: 2em;
@@ -62,4 +67,15 @@
     font-size: 1.3em;
   }
 
+  .Prose img {
+    margin: 0 -5%;
+    max-width: 110%;
+  }
+}
+
+@media (--md-viewport) {
+  .Prose img {
+    margin: 0 -7%;
+    max-width: 114%;
+  }
 }
