--- a/_includes/header-nonav.html
+++ b/_includes/header-nonav.html
@@ -2,5 +2,5 @@
 <html>
   {% include head.html %}
   <body>
-    <div>
-      <main id="page" class="main{% if page.classes %}{% for class in page.classes %} {{class}}{% endfor %}{% endif %}" role="main">
+    <div class="Header-container">
+      <main id="page" class="Header-child main{% if page.classes %}{% for class in page.classes %} {{class}}{% endfor %}{% endif %}" role="main">
